[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cf-bypass-toolkit"
version = "1.0.0"
description = "Production-grade Cloudflare protection bypass toolkit with multi-strategy fallback"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Prakhar Bhawsar", email = "prakhar1812.b@gmail.com" }]
keywords = ["cloudflare", "bypass", "scraping", "web-automation", "selenium", "playwright"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-dotenv>=1.0.1",
    "setuptools>=68.0.0",   # distutils shim needed by undetected-chromedriver on Python 3.12
    "cloudscraper>=1.2.71",
    "undetected-chromedriver>=3.5.5",
    "playwright>=1.45.0",
    "structlog>=24.4.0",
    "pydantic>=2.7.0",
    "fake-useragent>=1.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "ruff>=0.5.1",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/prakharbhawsar1/cloudflare-bypass-toolkit"
Repository = "https://github.com/prakharbhawsar1/cloudflare-bypass-toolkit"
Issues = "https://github.com/prakharbhawsar1/cloudflare-bypass-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -m 'not integration'"
markers = [
    "integration: real network tests — run with: pytest -m integration",
]

[tool.coverage.run]
source = ["src/cf_bypass"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
show_missing = true
